@@ -420,6 +420,9 @@ namespace bt
 		
 		/// Set the ChunkSelector to use (0 resets to the default ChunkSelector)
 		virtual void setChunkSelector(ChunkSelectorInterface* csel) = 0;
+		
+		/// After some network down time, the network is back up
+		virtual void networkUp() = 0;
 	signals:
 		/**
 		 * Emitted when we have finished downloading.
