@@ -31,6 +31,7 @@ Changes in 4.0beta2:
 - Fix SHA1 hash generation crashes by using shared pointers to PieceData (227400)
 - Fix crash in PeerConnector cleanup (228955)
 - Make it possible to change the ChunkSelector at runtime
+- Make torrents reannounce and kill all stale peers, when network comes back up after some downtime (184766)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
